--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>w-time</title>
+
+    <style>
+      .dark {
+        background-color: black;
+      }
+    </style>
+
+    <script>
+      window.addEventListener("load", () => {
+        const isDark = JSON.parse(localStorage.getItem("theme")) === "dark"
+        if (isDark) document.body.classList.add("dark")
+      })
+    </script>
   </head>
   <body>
-    <script>
-      const isDark = localStorage.getItem("theme") === "dark"
-      document.body.classList.toggle("dark", isDark)
-    </script>
-
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
