--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>w-time</title>
+
+    <title>TimeWiz</title>
+    <meta
+      name="description"
+      content="Effortlessly sync global schedules, organize meetings, and monitor flight arrivals across time zones."
+    />
 
     <style>
       .dark {
