remove non cities from select; fix calendar close on double click

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <title>TimeWiz</title>
-    <meta
-      name="description"
-      content="Effortlessly sync global schedules, organize meetings, and monitor flight arrivals across time zones."
-    />
+    <meta name="description" content="Scheduling meetings across time zones" />
 
     <style>
       body.dark {
