update deps; fix deploy

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>TimeWiz</title>
-    <meta name="description" content="Scheduling meetings across time zones" />
+    <title>TimeWiz – Effortlessly Schedule Meetings Across Time Zones</title>
+    <meta
+      name="description"
+      content="TimeWiz is your ultimate solution for effortlessly scheduling meetings across different time zones. Our intuitive platform takes the headache out of coordinating global meetings, allowing you to seamlessly collaborate with colleagues and clients worldwide. Say goodbye to time zone confusion and hello to efficient scheduling with TimeWiz. Try it now!"
+    />
 
     <style>
       body.dark {
