--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#202020" />
 
     <title>TimeWiz – Effortlessly Schedule Meetings Across Time Zones</title>
-    <meta
-      name="description"
-      content="TimeWiz is your ultimate solution for effortlessly scheduling meetings across different time zones. Our intuitive platform takes the headache out of coordinating global meetings, allowing you to seamlessly collaborate with colleagues and clients worldwide. Say goodbye to time zone confusion and hello to efficient scheduling with TimeWiz. Try it now!"
-    />
+    <meta name="description" content="TimeWiz is your ultimate solution for effortlessly scheduling meetings across different time zones. Our intuitive platform takes the headache out of coordinating global meetings, allowing you to seamlessly collaborate with colleagues and clients worldwide. Say goodbye to time zone confusion and hello to efficient scheduling with TimeWiz. Try it now!" />
+
+    <meta property="og:url" content="https://timewiz.cc/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="TimeWiz – Effortlessly Schedule Meetings Across Time Zones" />
+    <meta property="og:description" content="TimeWiz is your ultimate solution for effortlessly scheduling meetings across different time zones. Our intuitive platform takes the headache out of coordinating global meetings, allowing you to seamlessly collaborate with colleagues and clients worldwide. Say goodbye to time zone confusion and hello to efficient scheduling with TimeWiz. Try it now!" />
+    <meta property="og:image" content="https://timewiz.cc/og.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="timewiz.cc" />
+    <meta property="twitter:url" content="https://timewiz.cc/" />
+    <meta name="twitter:title" content="TimeWiz – Effortlessly Schedule Meetings Across Time Zones" />
+    <meta name="twitter:description" content="TimeWiz is your ultimate solution for effortlessly scheduling meetings across different time zones. Our intuitive platform takes the headache out of coordinating global meetings, allowing you to seamlessly collaborate with colleagues and clients worldwide. Say goodbye to time zone confusion and hello to efficient scheduling with TimeWiz. Try it now!" />
+    <meta name="twitter:image" content="https://timewiz.cc/og.png" />
 
     <style>
       body.dark {
