feat: add umami tracker

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="027ea328-44a5-4d2c-bd10-87ea5db0ed9d"></script>
   </body>
 </html>
